--- a/part5/notes/package.json
+++ b/part5/notes/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.0.1",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "http-proxy-middleware": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -41,7 +38,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.1.1",
     "eslint-plugin-jest": "^26.1.5",
+    "jest-watch-typeahead": "^0.6.5",
     "json-server": "^0.17.0"
   }
 }
