--- a/part5/notes/package.json
+++ b/part5/notes/package.json
@@ -42,6 +42,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.1.5",
     "jest-watch-typeahead": "^0.6.5",
     "json-server": "^0.17.0"
